--- a/movie/css/movie.css
+++ b/movie/css/movie.css
@@ -79,7 +79,7 @@
 
 .movie-dropdown {
   position: relative;
-  width: 110px;
+  width: 150px;
   font-size: 1.4rem;
 }
 
@@ -92,6 +92,7 @@
   height: 50px;
   background-color: #f5f5f5;
   border: 1px solid transparent;
+  font-size: 1.4rem;
   text-align: left;
   cursor: pointer;
 }
@@ -360,15 +361,26 @@
   .movie-tab::after {
     height: 2rem;
   }
+
   .movie-tab li:first-child {
     margin-right: 3rem;
   }
+
   .movie-tab li:not(.active):hover {
     color: #54585A;
   }
 
+  .movie-dropdown_btn  {
+    padding: 0 2rem;
+    font-size: 1.6rem;
+  }
+
   .movie-dropdown_btn:not(.selected):hover {
     border-color: #ccc;
+  }
+
+  .movie-dropdown_menu li {
+    padding: 0 2rem;
   }
 
   .movie-container {
