--- a/css/basic.css
+++ b/css/basic.css
@@ -500,17 +500,17 @@ footer > p {
   header #gnb ul {
     display: none;
     position: absolute;
-    top: 100%;
+    top: 80%;
     left: 0;
     width: 200px;
-    background-color: #f5f5f5;
-    box-shadow: 10px 10px 10px rgba(0, 0, 0,0.2);
+    background-color: #fff;
+    border: 1px solid #000;
+    box-shadow: 0 6px 12px 0 rgba(63, 65, 80, 0.1);
   }
 
   header #gnb ul li a {
     display: block;
     padding: 1.5rem 2rem;
-    border-top: 1px solid #eee;
   }
 
   header #gnb li:hover ul {
