--- a/css/basic.css
+++ b/css/basic.css
@@ -24,6 +24,14 @@ img {
   object-fit: cover;
 }
 
+button {
+  font-family: "Noto Sans Kr", system-ui, -apple-system, BlinkMacSystemFont,
+  "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+  sans-serif;
+  border: none;
+  cursor: pointer;
+}
+
 .blind {
   overflow: hidden;
   position: absolute;
