--- a/movie/css/movie.css
+++ b/movie/css/movie.css
@@ -124,7 +124,7 @@
   width: 100%;
   max-height: 0;
   overflow: hidden;
-  visibility: hidden;
+  /* visibility: hidden; */
   background-color: #fff;
   border: 1px solid transparent;  
   z-index: 99;
@@ -132,19 +132,20 @@
 }
 
 .movie-dropdown_menu.show {
-  max-height: 150px;
-  visibility: visible;
+  max-height: 200px;
+  /* visibility: visible; */
   border: 1px solid #ccc;  
   box-shadow: 0 4px 9px 0 rgba(63, 65, 80, 0.1);
 }
 
-.movie-dropdown_menu li {
+.movie-dropdown_menu li > button {
   width: 100%;
   height: 50px;
   padding: 0 1rem;
   line-height: 50px;
-  border-bottom: 1px solid #f5f5f5;
-  cursor: pointer;
+  text-align: left;
+  font-size: 1.4rem;
+  background-color: #fff;
 }
 
 .movie-content {
@@ -281,137 +282,4 @@
   text-align: center;
   line-height: 50px;
   cursor: pointer;
-}
-
-@media screen and (min-width:768px) {
-  .movie-title {
-    height: 30rem;
-  }
-
-  .movie-title h2 {
-    font-size: 4rem;
-  }
-
-  .movie-dropdown {
-    width: 230px;
-    font-size: 1.6rem;
-  }
-
-  .movie-content.show {
-    grid-template-columns: repeat(auto-fit, minmax(31% , auto));
-    gap: 2rem;
-  }
-
-  .movie-content li {
-    flex-direction: column;
-  }
-
-  .movie-img {
-    width: 100%;
-  }
-
-  .movie-text {
-    margin: 2rem 0 0;
-  }
-
-  .movie-text h3 {
-    margin-bottom: 2rem;
-    width: 100%;
-    height: 3rem;
-  }
-
-  .movie-text p {
-    display: block;
-    margin: 0.4rem 0 0;
-  }
-
-  .movie-text h3 a {
-    overflow: hidden;
-    display: block;
-    width: 100%;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
-
-  .movie-tiketing {
-    left: auto;
-    right: 0;
-    width: 120px;
-    height: 40px;
-    line-height: 40px;
-  }
-
-  .movie-more {
-    margin: 2rem 0 15rem;
-  }
-}
-
-@media screen and (min-width:1440px) {
-  .movie {
-    margin-top: 10rem;
-  }
-  .movie-title h2 {
-    font-size: 4.6rem;
-  }
-
-  .movie-tab {
-    font-size: 2.4rem;
-  }
-
-  .movie-tab::after {
-    height: 2rem;
-  }
-
-  .movie-tab li:first-child {
-    margin-right: 3rem;
-  }
-
-  .movie-tab li:not(.active):hover {
-    color: #54585A;
-  }
-
-  .movie-dropdown_btn  {
-    padding: 0 2rem;
-    font-size: 1.6rem;
-  }
-
-  .movie-dropdown_btn:not(.selected):hover {
-    border-color: #ccc;
-  }
-
-  .movie-dropdown_menu li {
-    padding: 0 2rem;
-  }
-
-  .movie-container {
-    margin: 0 auto;
-    padding: 0;
-    max-width: 1400px;
-  }
-
-  .movie-content.show {
-    grid-template-columns: repeat(auto-fit, minmax(23.5%, auto));
-    gap: 2rem;
-  }
-
-  .movie-text h3 {
-    font-size: 2.4rem;
-  }
-
-  .movie-img:hover .movie-info {
-    opacity: 1;
-    visibility: visible;
-  }
-
-  .movie-tiketing:hover {
-    background-color: #BF2419;
-  }
-
-  .movie-more {
-    margin: 2rem 0 17rem;
-  }
-
-  .movie-more:hover {
-    border-color: #DA291C;
-  }
 }
