[220718] 영화페이지&예매하기 수정

--- a/css/basic.css
+++ b/css/basic.css
@@ -29,6 +29,7 @@ button {
   "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
   sans-serif;
   border: none;
+  color: inherit;
   cursor: pointer;
 }
 
