--- a/tiketting/css/ticketing_tablet.css
+++ b/tiketting/css/ticketing_tablet.css
@@ -25,6 +25,8 @@
   overflow-y: auto;
 }
 
+/* ::-webkit-scrollbar */
+
 /******* tiketing theater *******/
 .tiketing-theater {
   border-right: 1px solid #eee;
