--- a/css/basic.css
+++ b/css/basic.css
@@ -52,6 +52,10 @@ button {
   cursor: pointer;
 }
 
+.link{
+  font-weight: 500;
+  color: #000;
+}
 
 /****** header ******/
 header {
@@ -155,6 +159,7 @@ header .serch_icon {
 #m_gnb .m_gnb-menu {
   display: flex;
   flex-wrap: wrap;
+  color: #555;
 }
 
 #m_gnb .m_gnb-menu li {
@@ -173,6 +178,7 @@ header .serch_icon {
   width: 100%;
   background-color: #f5f5f5;
   font-size: 1.6rem;
+  color: #555;
 }
 
 #m_gnb .m_gnb-utill li {
@@ -196,6 +202,8 @@ header .serch_icon {
   height: 10px;
   background-color: #ccc;
 }
+
+
 
 #m_gnb .m_gnb-utill li:last-child a::after {
   display: none;
@@ -297,7 +305,7 @@ footer > p {
   background: url(../images/img_lotte01.jpg) no-repeat 50% / cover;
   opacity: 0;
   visibility: hidden;
-  transition: opacity 0.5s;
+  transition: opacity 0.5s, visibility 0.5s;
 }
 
 #serch.serch-view {
@@ -320,7 +328,7 @@ footer > p {
   justify-content: space-between;
   align-items: center;
   width: 80%;
-  transform: translateY(-50%);
+  transform: translateY(-200%);
   transition: transform 1s;
 }
 
@@ -488,7 +496,11 @@ footer > p {
     position: relative;
     margin: 0 0.5rem;
     height: 100%;
-    color: #333;
+    color: #555;
+  }
+
+  header > ul > li.link ul {
+    font-weight: 400;
   }
 
   header > ul > li > a {
