--- a/tiketting/css/ticketing_pc.css
+++ b/tiketting/css/ticketing_pc.css
@@ -55,6 +55,7 @@ body {
 
 .tiketing-area {
   width: 50%;
+  background-color: #f5f5f5;
 }
 
 .tiketing-area > li.active {
@@ -68,7 +69,6 @@ body {
   top: 0;
   left: 50%;
   background-color: #fff;
-  overflow-y: auto;
   z-index: 99;
 }
 
@@ -76,7 +76,9 @@ body {
   background-color: #fff;
 }
 
-.tiketing-area .select_theater {
+.tiketing-area > li.select_theater,
+.tiketing-area > li[data-active="on"].select_theater,
+.tiketing-area > li[data-active="off"].select_theater {
   position: absolute;
   top: 0;
   right: 0;
@@ -88,6 +90,19 @@ body {
   text-align: center;
   font-size: 1.6rem;
   color: #999;
+}
+
+.tiketing-area > li[data-active="on"] {
+  display: block;
+}
+
+.tiketing-area > li.active .tiketing-zone {
+  display: none;
+}
+
+.tiketing-area > li[data-active="select"].active .tiketing-zone {
+  margin: 0;
+  position: absolute;
 }
 
 .tiketing-zone > li {
