--- a/tiketting/css/ticketing_tablet.css
+++ b/tiketting/css/ticketing_tablet.css
@@ -25,8 +25,6 @@
   overflow-y: auto;
 }
 
-/* ::-webkit-scrollbar */
-
 /******* tiketing theater *******/
 .tiketing-theater {
   border-right: 1px solid #eee;
@@ -35,8 +33,7 @@
 .tiketing-area {
   height: 100%;
   overflow-y: auto;
-  /* width: 50%; */
-  background-color: #f5f5f5;
+  background-color: #fff;
 }
 
 .tiketing-area > li {
@@ -52,8 +49,6 @@
   position: static;
   grid-column: 1 / span 3;
   justify-content: flex-start;
-  /* width: 100%; */
-  /* grid-template-columns: minmax(30%, 100px) minmax(30%, 300px) 1fr ; */
   height: auto;
 }
 
